@@ -1,3 +1,10 @@
+2019-02-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* uniblock.c: Update references Unicode blocks Blocks-12.0.0.txt
+	and CMap files.
+	* COPYRIGHT: Update copyright years.
+	* version.h: Bump version.
+
 2019-01-23  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* makejvf.1: Add fallback TeX and LaTeX logos.
